# wedding-planner

./: .env.development  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
src/: App.jsx  App.module.css  App.tsx  index.css  index.jsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mobile.rs
src-tauri/src/lib/: tauri.ts
src/api/: AIWeddingService.ts  PinterestAPIService.ts  TimelineService.ts
src/components/: GuestList.jsx  GuestList.tsx  Navigation.jsx  Navigation.tsx  Overview.tsx  SeatingChart.jsx  SeatingChart.tsx  Sidebar.tsx  TodoList.jsx  TodoList.tsx  WeddingDetails.jsx  WeddingDetails.tsx
src/components/common/: LoadingSpinner.tsx  ProgressBar.tsx  StatCard.tsx
src/components/gallery/: Gallery.tsx  GalleryStats.tsx  MediaFilters.tsx  MediaGrid.tsx  MediaItem.tsx  MediaModal.tsx  MediaUploadArea.tsx  UploadSettings.tsx
src/components/guest/: GuestGallery.tsx  GuestInfo.tsx  GuestWelcome.tsx  GuestWishlist.tsx
src/components/guests/: GuestCard.tsx  GuestForm.tsx  GuestList.tsx  GuestStats.tsx  PlusOneForm.tsx
src/components/invitations/: GuestCard.tsx  GuestForm.tsx  GuestList.tsx  GuestStats.tsx  PlusOneForm.tsx
src/components/layout/: CoupleHeader.tsx  CoupleLayout.tsx  CoupleSidebar.tsx  GuestHeader.tsx  GuestLayout.tsx  GuestNavigation.tsx  Header.tsx  MainLayout.tsx  Sidebar.tsx
src/components/overview/: BudgetBreakdown.tsx  BudgetOverviewCard.tsx  HeroSection.tsx  Overview.tsx  PlanningInsightsCard.tsx  PlanningTips.tsx  QuickActions.tsx  QuickActionsCard.tsx  RSVPBreakdown.tsx  RSVPStatusCard.tsx  StatsGrid.tsx  (+1 more)
src/hooks/: useDragAndDrop.ts  useWeddingStats.ts
src/utils/: currency.ts  date.ts  guest.ts  progress.ts  status.ts  validation.ts
(+50 files in other folders)
